--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,34 @@
 body {
  margin: 0;
- font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
- -webkit-font-smoothing: antialiased;
- -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
- font-family: kavoon-regular;
- src: url("../src/assets/Kavoon-Regular.ttf");
+ font-family: "FoundersGrotesk-Bold";
+ src: url("../src/assets/FoundersGrotesk-Bold.otf");
+}
+
+@font-face {
+ font-family: "FoundersGrotesk-Semibold";
+ src: url("../src/assets/FoundersGrotesk-Semibold.otf");
+}
+
+@font-face {
+ font-family: "FoundersGrotesk-Medium";
+ src: url("../src/assets/FoundersGrotesk-Medium.otf");
+}
+
+@font-face {
+ font-family: "FoundersGrotesk-Regular";
+ src: url("../src/assets/FoundersGrotesk-Regular.otf");
+}
+
+.background-cover {
+ background-color: #6e0d94;
 }
 
 .title {
- font-family: kavoon-regular;
- font-size: 30px;
+ font-family: FoundersGrotesk-Bold;
+ font-size: 40px;
  font-weight: bolder;
  color: white;
  margin: 0;
@@ -22,25 +37,19 @@ body {
  display: flex;
  align-items: center;
  justify-content: center;
+ text-align: center;
 }
 
 .subtitle {
- font-family: roboto;
- font-size: 25px;
+ font-family: FoundersGrotesk-Semibold;
+ font-size: 35px;
  font-weight: bolder;
  color: #ffd850;
  margin: 0;
  padding: 50px;
  display: flex;
- /* align-items: center; */
+ text-align: center;
  justify-content: center;
-}
-
-.background-cover {
- background-image: url("./assets/cover_purple.png");
- background-repeat: "no-repeat";
- background-size: cover;
- height: 180vh;
 }
 
 .front_cover {
@@ -49,20 +58,21 @@ body {
 }
 
 .textbox {
- width: 310px;
+ font-family: FoundersGrotesk-Regular;
+ width: 350px;
  color: white;
  font-size: 20px;
  font-weight: 700;
  padding-left: 60px;
  position: absolute;
  top: 130vh;
+ text-align: center;
 }
 
 .symbol_cruz {
  width: 150px;
  padding-right: 10%;
- display: flex;
  position: absolute;
- top: 132vh;
+ top: 130vh;
  right: 10px;
 }
