--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body {
 
 .background-cover {
  background-color: #6e0d94;
+ height: 120vh;
 }
 
 .title {
@@ -32,29 +33,29 @@ body {
  font-weight: bolder;
  color: white;
  margin: 0;
- padding-top: 50px;
- margin-left: 50px;
+ padding-top: 40px;
+ margin-left: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
 }
 
+@media only screen and (min-width: 420px) {
+ .title {
+  color: green;
+ }
+}
 .subtitle {
  font-family: FoundersGrotesk-Semibold;
  font-size: 35px;
  font-weight: bolder;
  color: #ffd850;
  margin: 0;
- padding: 50px;
+ padding-top: 10px;
  display: flex;
  text-align: center;
  justify-content: center;
-}
-
-.front_cover {
- width: 70%;
- height: auto;
 }
 
 .textbox {
@@ -65,7 +66,7 @@ body {
  font-weight: 700;
  padding-left: 60px;
  position: absolute;
- top: 130vh;
+ top: 82vh;
  text-align: center;
 }
 
