--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
  font-size: 62.5%; /* =10px */
+ overflow-x: hidden;
 }
 
 :root {
@@ -13,6 +14,7 @@ html {
 
 body {
  margin: 0;
+ padding: 0;
 }
 
 @font-face {
@@ -35,27 +37,14 @@ body {
  src: url("../src/assets/FoundersGrotesk-Bold.otf");
 }
 
-.fragment {
- display: grid;
- grid-template-columns: ;
- grid-template-rows: repeat(2, 1fr);
- grid-column-gap: 0px;
- grid-row-gap: 0px;
-}
-
-.cover {
- grid-area: 1 / 1 / 2 / 2;
-}
-.concept {
- grid-area: 2 / 1 / 3 / 2;
-}
-.concept {
- background-color: rgb(3, 94, 146);
-}
-
 .background-cover {
- height: 85vh;
+ height: 50%;
 }
+
+.concept {
+ height: 50%;
+}
+
 .background-cover {
  background-color: var(--main-color);
  background-repeat: repeat-x;
@@ -137,9 +126,9 @@ body {
  margin-bottom: 16px;
 }
 
-/* .bg-CD {
+.bg-CD {
  background-color: #a301e7;
-} */
+}
 
 .title-ConceptDefinition {
  position: relative;
