--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
 
 .background-cover {
  background-color: var(--main-color);
- background-repeat: repeat-x;
+ background-size: cover;
 }
 
 .title {
@@ -91,7 +91,7 @@ body {
  .background-cover {
   color: var(--font-color);
   background-color: var(--main-color);
-  width: 100vh;
+  background-size: cover;
  }
  .img_cover {
   width: 80%;
@@ -100,13 +100,15 @@ body {
 
 .footer-container {
  height: 140px;
+ width: 1200px;
  display: flex;
- justify-content: space-between;
+ justify-content: space-around;
+ align-items: center;
+ align-self: center;
 }
 
 .textbox {
  width: 370px;
- margin-left: 15rem;
  display: inline-block;
  text-align: center;
 }
@@ -117,10 +119,6 @@ body {
  font-weight: 500;
 }
 
-.img-container {
- margin-right: 15rem;
-}
-
 .symbol_cruz {
  width: 120px;
  margin-bottom: 16px;
@@ -128,6 +126,7 @@ body {
 
 .bg-CD {
  background-color: #a301e7;
+ background-size: cover;
 }
 
 .title-ConceptDefinition {
@@ -160,6 +159,25 @@ body {
  text-align: center;
 }
 
+.subtext-ConceptDefinition {
+ color: var(--font-color);
+ font-family: FoundersGrotesk-Regular;
+ font-size: var(--size-text);
+ font-weight: 500;
+}
+
+.subtext-ConceptDefinition {
+ width: 700px;
+ margin-left: 10rem;
+ /* position: relative; */
+ display: inline-block;
+ text-align: center;
+}
+
 .img1-ConceptDefinition {
  width: 600px;
+}
+
+.img2-ConceptDefinition {
+ width: 450px;
 }
