--- a/src/index.css
+++ b/src/index.css
@@ -96,23 +96,24 @@ body {
  display: block;
  margin: auto;
  height: 420px;
- width: 420px;
+ width: 460px;
 }
 
 .footer-container {
  height: 140px;
- width: 100px;
+ width: 800px;
  margin: auto;
  display: flex;
- justify-content: space-around;
+ justify-content: space-between;
  background-color: var(--main-color);
  align-items: center;
- align-self: center;
+ /* align-self: center; */
 }
 
 .textbox {
- width: 310px;
+ width: 315px;
  height: 90px;
+ margin-left: 50px;
  background-color: var(--main-color);
  display: flex;
  align-items: center;
@@ -125,12 +126,12 @@ body {
 }
 
 .img-container {
- margin-right: 100px;
+ margin-right: 50px;
 }
 
 .symbol_cruz {
  width: 100px;
- margin-bottom: 30px;
+ align-self: center;
 }
 
 @media screen and (max-width: 1140px) {
@@ -157,9 +158,17 @@ body {
  }
 }
 
-@media screen and (max-width: 1600px) {
+@media screen and (min-width: 1020px) {
  .footer-container {
-  width: 800px;
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+ }
+}
+
+@media screen and (min-width: 1180px) {
+ .footer-container {
+  width: 1100px;
   margin-left: auto;
   margin-right: auto;
  }
