--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,12 @@ html {
 
 :root {
  --size-title: 3.6rem;
- --size-subtitle: 3.2rem;
+ --size-subtitle: 3rem;
  --size-text: 2.2rem;
  --main-color: #6e0d94;
  --font-color: #ffffff;
  --font-subcolor: #fecc1b;
+ --font-color2: #a301e7;
 }
 
 body {
@@ -184,8 +185,10 @@ body {
  display: flex;
  justify-content: center;
  text-align: center;
+ align-items: center;
  margin: 0;
- padding-top: 60px;
+ height: 100px;
+ background-color: var(--font-color2);
 }
 
 .title-ConceptDefinition {
@@ -193,12 +196,11 @@ body {
  font-family: FoundersGrotesk-Bold;
  font-size: var(--size-subtitle);
  font-weight: bolder;
- margin-bottom: 1rem;
 }
 
 .text-ConceptDefinition {
  color: var(--font-color);
- font-family: FoundersGrotesk-Regular;
+ font-family: FoundersGrotesk-Semibold;
  font-size: var(--size-text);
  font-weight: 500;
 }
@@ -215,15 +217,6 @@ body {
  font-family: FoundersGrotesk-Regular;
  font-size: var(--size-text);
  font-weight: 500;
-}
-
-.text-ConceptDefinition {
- width: 470px;
- /* margin-left: 20rem; */
- /* position: relative; */
- display: inline-block;
- background-color: solid goldenrod;
- justify-content: center;
 }
 
 .content {
@@ -255,7 +248,29 @@ body {
   width: 800px;
   margin-left: auto;
   margin-right: auto;
-  border: solid red;
-  background-color: #6e0d94;
+  background-color: ;
+ }
+}
+
+.text-ConceptDefinition {
+ margin-left: 5vw;
+ /* position: relative; */
+ display: inline-block;
+ background-color: rgb(241, 195, 78);
+ justify-content: center;
+}
+
+@media screen and (max-width: 820px) {
+ .content {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+ }
+}
+
+@media screen and (max-width: 900px) {
+ .figure-CD .img1-ConceptDefinition {
+  width: 300px;
+  height: auto;
  }
 }
